Make text-decorations deal with percentage padding.  Bug 236175, patch by Hideo Saito <saito@densan.co.jp>, r=bzbarsky, sr=dbaron